Post status setting was renamed to Default Post Status and moved to the Message tab.

= 1.4.10 =
All script, style and body tags are stripped from html emails.

= 1.4.6 =
Attachments are now processed in the order they were attached.

== CHANGELOG ==
= 1.6.15 (future) =
* Remove "Wrap content in pre tags" option as it was defaulted to "yes" but never correctly applied.

= 1.6.14 (2015-02-26) =
* Fully support custom taxonomies

= 1.6.13 (2015-02-25) =
* Add some additional checks and error messages to postie_media_handle_upload for cases where the TMP directory isn't writable.
* Any user with "Roles that can post" can now be the default poster.

= 1.6.12 (2015-02-09) =
* Fix confirmation emails that were always sending to administrator.
* Fix regression in 1.6.11 which prevented attachments from being displayed in some cases.

= 1.6.11 (2015-01-30) =
* Call wp_set_current_user() so that other WP functions that depend on the current user work correctly. (custom taxonomy)
* Only do image template processing if the preferred text type is plain
* Removed http_response_code() call since it is only supported by PHP 5.4 or newer.

= 1.6.10 (2015-1-2) =
* Testing against 4.1
* New icon in admin

= 1.6.9 (2014.12.1) =
* Post status list is now read from WordPress settings, rather than being a hard-coded list.
* Settings look & feel matching WP default style.
* Testing against WP 4.0.1

= 1.6.8 (2014.11.14) =
* Fixed bug where the #img tag was being used as the subject if it is the very first line in the email.
* Fixed bug where the allow subject in body setting was being ignored.

= 1.6.7 (2014.11.05) =
* Fixed bug where base64 text with utf-8 charset was trying to convert encoding to utf-8

= 1.6.6 (2014.10.29) =
* Add additional debugging to isValidSmtpServer
* Add Japanese translation
* Fixed bug where a subject present in the body is not recognized

= 1.6.5 (2014.10.22) =
* Fixed charset encoding bug when there wasn't a content-transfer-encoding header