@@ -29,6 +29,9 @@ Attachments are now processed in the order they were attached.
 == CHANGELOG ==
 = 1.6.15 (future) =
 * Remove "Wrap content in pre tags" option as it was defaulted to "yes" but never correctly applied.
+* Allow time correction values of 0.5
+* New setting: "Treat Replies As" allows user to specify if replies should be processed as comments or new posts.
+
 
 = 1.6.14 (2015-02-26) =
 * Fully support custom taxonomies
